test/errors/union_types_error/zs/optional_field_error.zs
package optional_field_error;

union OptionalFieldNotAllowed(int32 param)
{
    int32 field1;
    int16 field2 if param < 10;
};
